# conversions_rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  RELEASE_CHECKLIST.md  RELEASE_SETUP.md  RELEASE_v1.2.0_STATUS.md  WASM.md  WASM_RELEASE_SUMMARY.md  build-wasm.bat  build-wasm.sh  demo.html  package.json  test-wasm.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: GITHUB_PAGES_SETUP.md
docs/pkg/web/: LICENSE-MIT  README.md  conversions_rs.d.ts  conversions_rs.js  conversions_rs_bg.wasm  conversions_rs_bg.wasm.d.ts  package.json
examples/: modular_api_demo.rs
src/: lib.rs  main.rs  wasm.rs
src/conversions/: area.rs  current.rs  length.rs  luminous_intensity.rs  mod.rs  substance.rs  temperature.rs  time.rs  volume.rs  weight.rs
