[package]
name = "conversions_rs"
version = "1.1.0"
edition = "2021"
description = "A comprehensive unit conversion library and CLI tool with full SI (International System of Units) support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RK1PF/conversions_rs"
homepage = "https://github.com/RK1PF/conversions_rs"
documentation = "https://docs.rs/conversions_rs"
readme = "README.md"
keywords = ["conversion", "units", "SI", "measurement", "physics"]
categories = ["command-line-utilities", "science", "mathematics"]
authors = ["Raihau GRAFFE <graffe.raihau@gmail.com>"]
rust-version = "1.70.0"
exclude = [
    ".github/",
    "target/",
    "examples/",
    "*.md",
    "Cargo.lock",
]

[[bin]]
name = "conversions_rs"
path = "src/main.rs"

[lib]
name = "conversions_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "=4.4.0", features = ["derive"] }
