[package]
name = "conversions_rs"
version = "1.2.1"
edition = "2021"
description = "A comprehensive unit conversion library, CLI tool, and WebAssembly module with full SI (International System of Units) support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RK1PF/conversions_rs"
homepage = "https://github.com/RK1PF/conversions_rs"
documentation = "https://docs.rs/conversions_rs"
readme = "README.md"
keywords = ["conversion", "units", "measurement", "wasm", "SI"]
categories = ["command-line-utilities", "science", "mathematics", "wasm"]
authors = ["Raihau GRAFFE <graffe.raihau@gmail.com>"]
rust-version = "1.70.0"
exclude = [
    ".github/",
    "target/",
    "examples/",
    "*.md",
    "Cargo.lock",
]

[[bin]]
name = "conversions_rs"
path = "src/main.rs"

[lib]
name = "conversions_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "=4.4.0", features = ["derive"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "js-sys", "serde", "serde-wasm-bindgen"]
